// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a single constellation card when provided data 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="card col-12 col-md-4 rounded-0"
    >
      <div
        className="card-body"
      >
        <h5
          className="card-title"
        >
          Crater
           -
           
          <small
            className="text-muted"
          >
            Cup
          </small>
        </h5>
        <p
          className="card-text"
        >
          <strong>
            Stars with Planets: 
          </strong>
          10
        </p>
        <p
          className="card-text"
        >
          <strong>
            Quadrant: 
          </strong>
          SQ2
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders multiple constellation cards when provided data 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="card col-12 col-md-4 rounded-0"
    >
      <div
        className="card-body"
      >
        <h5
          className="card-title"
        >
          Gemini
           -
           
          <small
            className="text-muted"
          >
            Twins
          </small>
        </h5>
        <p
          className="card-text"
        >
          <strong>
            Stars with Planets: 
          </strong>
          11
        </p>
        <p
          className="card-text"
        >
          <strong>
            Quadrant: 
          </strong>
          NQ2
        </p>
      </div>
    </div>
    <div
      className="card col-12 col-md-4 rounded-0"
    >
      <div
        className="card-body"
      >
        <h5
          className="card-title"
        >
          Hydrus
           -
           
          <small
            className="text-muted"
          >
            Water Snake
          </small>
        </h5>
        <p
          className="card-text"
        >
          <strong>
            Stars with Planets: 
          </strong>
          5
        </p>
        <p
          className="card-text"
        >
          <strong>
            Quadrant: 
          </strong>
          SQ1
        </p>
      </div>
    </div>
    <div
      className="card col-12 col-md-4 rounded-0"
    >
      <div
        className="card-body"
      >
        <h5
          className="card-title"
        >
          Leo
           -
           
          <small
            className="text-muted"
          >
            Lion
          </small>
        </h5>
        <p
          className="card-text"
        >
          <strong>
            Stars with Planets: 
          </strong>
          19
        </p>
        <p
          className="card-text"
        >
          <strong>
            Quadrant: 
          </strong>
          NQ2
        </p>
      </div>
    </div>
  </div>
</div>
`;
